samples/_failures_safe/1761302829_d58fe2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_92924ab2.c: In function ‘main’:
./samples/SAFE/__tmp_92924ab2.c:142:37: error: expected ‘)’ at end of input
  142 |     if (scanf("%d", &operation) != 1
      |        ~                            ^
      |                                     )
./samples/SAFE/__tmp_92924ab2.c:142:5: error: expected declaration or statement at end of input
  142 |     if (scanf("%d", &operation) != 1
      |     ^~
